# QS-indicators-SNCF

./: IndicatorsQS.py  README.md  analysis QS indicators SNCF.ipynb  pyproject.toml  tableau_extrait.xlsx  tableau_nettoye.xlsx
.ipynb_checkpoints/: analysis QS indicators SNCF-checkpoint.ipynb
src/qsindicators/: __init__.py
