[project]
name = "qsindicators"
version = "0.1.0"
description = "Add your description here"
dependencies = [
    "jupyterlab>=4.2.5",
    "jupyter>=1.1.1",
    "requests>=2.32.3",
    "pdfplumber>=0.11.4",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "openai>=1.51.2",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/qsindicators"]
